[dyad] wrote 15 file(s)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/logo.png" /> <!-- Added favicon link -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SBF coaching</title> <!-- Updated page title -->
+    <title>àFonte coaching</title> <!-- Updated page title -->
     <meta name="google-site-verification" content="vCB0iGrsrwNz5RJuMIU9Tzd-mP7BIT-hf0_RE7YSnOw" /> <!-- Google Search Console verification -->
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-4HWGD7KEEK"></script>
